--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,8 +9,9 @@
       // Picture element HTML5 shiv
       document.createElement( "picture" );
     </script>
-    <script src="js/picturefill.js" async=""></script>
-    <script src="js/svguse.js" defer=""></script>
+    <script src="js/polyfill/picturefill.js" async=""></script>
+    <script src="js/polyfill/svguse.js" defer=""></script>
+    <script src="js/polyfill/focus-visible.js"></script>
   </head>
   <body class="content no-js">
     <script>
@@ -22,7 +23,7 @@
 
     <header class="page-header">
       <div class="page-header__wrapper">
-        <a class="logo page-header__logo" href="index.html">
+        <a class="logo page-header__logo" href="index.html" alt="Переход на главную страницу">
           <picture>
             <source media="(min-width: 1220px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
@@ -36,7 +37,7 @@
               <a class="site-list__link" href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link site-list__link--active" href="#">Каталог продукции</a>
+              <a class="site-list__link site-list__link--active">Каталог продукции</a>
             </li>
             <li class="site-list__item">
               <a class="site-list__link" href="form.html">Подбор программы</a>
@@ -53,7 +54,7 @@
         <ul class="catalog__list">
           <li class="catalog__item product">
             <div class="product__wrapper">
-              <a class="product__link" href="#">
+              <a class="product__link" href="#" tabindex="-1">
                 <picture>
                   <source type="image/webp" media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.webp 1x, img/chicken-small-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.webp 1x, img/chicken-small-tablet@2x.webp 2x">
@@ -61,7 +62,7 @@
 
                   <source media="(min-width: 1220px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
-                  <img class="product__image" width="140" height="144" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Кэт энерджи с курицей 500г">
+                  <img class="product__image" width="140" height="144" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Кэт энерджи с курицей 500г" tabindex="0">
                 </picture>
               </a>
               <table class="product__composition">
@@ -86,7 +87,7 @@
           </li>
           <li class="catalog__item product">
             <div class="product__wrapper">
-              <a class="product__link" href="#">
+              <a class="product__link" href="#" tabindex="-1">
                 <picture>
                   <source type="image/webp" media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.webp 1x, img/chicken-big-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.webp 1x, img/chicken-big-tablet@2x.webp 2x">
@@ -94,7 +95,7 @@
 
                   <source media="(min-width: 1220px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
-                  <img class="product__image" width="140" height="144" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Кэт энерджи с курицей 1000г">
+                  <img class="product__image" width="140" height="144" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Кэт энерджи с курицей 1000г" tabindex="0">
                 </picture>
               </a>
               <table class="product__composition">
@@ -119,7 +120,7 @@
           </li>
           <li class="catalog__item product">
             <div class="product__wrapper">
-              <a class="product__link" href="#">
+              <a class="product__link" href="#" tabindex="-1">
                 <picture>
                   <source type="image/webp" media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.webp 1x, img/fish-small-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.webp 1x, img/fish-small-tablet@2x.webp 2x">
@@ -127,7 +128,7 @@
 
                   <source media="(min-width: 1220px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
-                  <img class="product__image" width="140" height="144" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Кэт энерджи с рыбой 500г">
+                  <img class="product__image" width="140" height="144" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Кэт энерджи с рыбой 500г" tabindex="0">
                 </picture>
               </a>
               <table class="product__composition">
@@ -152,7 +153,7 @@
           </li>
           <li class="catalog__item product">
             <div class="product__wrapper">
-              <a class="product__link" href="#">
+              <a class="product__link" href="#" tabindex="-1">
                 <picture>
                   <source type="image/webp" media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.webp 1x, img/fish-big-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.webp 1x, img/fish-big-tablet@2x.webp 2x">
@@ -160,7 +161,7 @@
 
                   <source media="(min-width: 1220px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
-                  <img class="product__image" width="140" height="144" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Кэт энерджи с рыбой 1000г">
+                  <img class="product__image" width="140" height="144" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Кэт энерджи с рыбой 1000г" tabindex="0">
                 </picture>
               </a>
               <table class="product__composition">
@@ -185,7 +186,7 @@
           </li>
           <li class="catalog__item product">
             <div class="product__wrapper">
-              <a class="product__link" href="#">
+              <a class="product__link" href="#" tabindex="-1">
                 <picture>
                   <source type="image/webp" media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
@@ -193,7 +194,7 @@
 
                   <source media="(min-width: 1220px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
-                  <img class="product__image" width="140" height="144" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Кэт энерджи с гречькой 500г">
+                  <img class="product__image" width="140" height="144" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Кэт энерджи с гречькой 500г" tabindex="0">
                 </picture>
               </a>
               <table class="product__composition">
@@ -218,7 +219,7 @@
           </li>
           <li class="catalog__item product">
             <div class="product__wrapper">
-              <a class="product__link" href="#">
+              <a class="product__link" href="#" tabindex="-1">
                 <picture>
                   <source type="image/webp" media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.webp 1x, img/buckwheat-big-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.webp 1x, img/buckwheat-big-tablet@2x.webp 2x">
@@ -226,7 +227,7 @@
 
                   <source media="(min-width: 1220px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
-                  <img class="product__image" width="140" height="144" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Кэт энерджи с гречькой 1000г">
+                  <img class="product__image" width="140" height="144" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Кэт энерджи с гречькой 1000г" tabindex="0">
                 </picture>
               </a>
               <table class="product__composition">
@@ -251,7 +252,7 @@
           </li>
           <li class="catalog__item product">
             <div class="product__wrapper">
-              <a class="product__link" href="#">
+              <a class="product__link" href="#" tabindex="-1">
                 <picture>
                   <source type="image/webp" media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.webp 1x, img/rice-small-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.webp 1x, img/rice-small-tablet@2x.webp 2x">
@@ -259,7 +260,7 @@
 
                   <source media="(min-width: 1220px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
-                  <img class="product__image" width="140" height="144" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Кэт энерджи с рисом 500г">
+                  <img class="product__image" width="140" height="144" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Кэт энерджи с рисом 500г" tabindex="0">
                 </picture>
               </a>
               <table class="product__composition">
@@ -346,7 +347,7 @@
           <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <p class="address__map address__map--pin">
-          <iframe src="https://yandex.ru/map-widget/v1/-/CGVqiR3-" width="320" height="400"></iframe>
+          <iframe src="https://yandex.ru/map-widget/v1/-/CGVqiR3-" width="320" height="400" tabindex="-1"></iframe>
           <picture>
             <source media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
@@ -355,12 +356,12 @@
         </p>
       </div>
       <div class="page-footer__container">
-        <a class="logo page-footer__logo" href="index.html">
+        <a class="logo page-footer__logo" href="index.html" alt="Переход на главную страницу">
           <img class="logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи">
         </a>
         <ul class="social-list page-footer__social">
           <li class="social-list__item">
-            <a href="#" class="social__link">
+            <a href="#" class="social__link" alt="Перейти на Вконтакте">
               <svg class="social__icon social__icon--vk" width="25" height="20" viewbox="0 0 22 12">
                 <use xlink:href="img/sprite.svg#sprite-vk"></use>
               </svg>
@@ -368,7 +369,7 @@
             </a>
           </li>
           <li class="social-list__item">
-            <a href="#" class="social__link">
+            <a href="#" class="social__link" alt="Перейти в Инстаграм">
               <svg class="social__icon social__icon--insta" width="25" height="20" viewbox="0 0 16.1 16">
                 <use xlink:href="img/sprite.svg#sprite-insta"></use>
               </svg>
@@ -376,7 +377,7 @@
             </a>
           </li>
           <li class="social-list__item">
-            <a href="#" class="social__link social__link--facebook">
+            <a href="#" class="social__link" alt="Перейти в Фейсбук">
               <svg class="social__icon social__icon--insta" width="25" height="20" viewbox="0 0 10 19">
                 <use xlink:href="img/sprite.svg#sprite-fb"></use>
               </svg>
@@ -385,7 +386,7 @@
           </li>
         </ul>
         <div class="copyright page-footer__copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" alt="Перейти на курс HTML Academy">
             HTML Academy
             <svg class="copyright__icon" width="30px" height="35" viewbox="0 0 60 60">
               <use xlink:href="img/sprite.svg#sprite-htmlacademy"></use>
