--- a/source/form.html
+++ b/source/form.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Кэт энерджи: подбор программы</title>
+    <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/oswaldmedium.woff" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/oswaldregular.woff" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
     <script>
-      // Picture element HTML5 shiv
       document.createElement( "picture" );
     </script>
     <script src="js/polyfill/picturefill.js" async=""></script>
@@ -173,7 +176,7 @@
           <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
         <p class="address__map address__map--pin">
-          <iframe src="https://yandex.ru/map-widget/v1/-/CGVqiR3-" width="320" height="400" tabindex="-1"></iframe>
+          <iframe src="https://yandex.ru/map-widget/v1/-/CGVqiR3-" width="320" height="400" tabindex="-1">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</iframe>
           <picture>
             <source media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
