--- a/source/index.html
+++ b/source/index.html
@@ -74,7 +74,7 @@
             </li>
             <li class="programs__item programs__item--cat-pro">
               <h3 class="programs__title">Набор массы</h3>
-              <p class="programs__description">Заработать авторитет среди дворовых котов <br> и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые<br> мышцы!
+              <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
               </p>
               <a class="programs__link" href="catalog.html">Каталог pro</a>
             </li>
