--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,6 +9,7 @@
     <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="fonts/oswaldregular.woff" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
+    <script src="js/polyfill/picturefill.js" async=""></script>
   </head>
   <body class="content no-js">
     <script>
@@ -204,7 +205,7 @@
                 </tr>
                 <tr class="product__item">
                   <td class="product__index">Вкус</td>
-                  <td class="product__value">Гречька</td>
+                  <td class="product__value">Гречка</td>
                 </tr>
                 <tr class="product__item">
                   <td class="product__index">Цена</td>
@@ -237,7 +238,7 @@
                 </tr>
                 <tr class="product__item">
                   <td class="product__index">Вкус</td>
-                  <td class="product__value">Гречька</td>
+                  <td class="product__value">Гречка</td>
                 </tr>
                 <tr class="product__item">
                   <td class="product__index">Цена</td>
@@ -360,7 +361,7 @@
           <li class="social-list__item">
             <a href="#" class="social-list__link" aria-label="Перейти на Вконтакте">
               <svg class="social-list__icon social-list__icon--vk" width="22" height="12" viewbox="0 0 22 12">
-                <use xlink:href="img/sprite.svg#sprite-vk"></use>
+                <use xlink:href="#sprite-vk"></use>
               </svg>
               Мы Вконтакте
             </a>
@@ -368,7 +369,7 @@
           <li class="social-list__item">
             <a href="#" class="social-list__link" aria-label="Перейти в Инстаграм">
               <svg class="social-list__icon social-list__icon--insta" width="16" height="16" viewbox="0 0 16.1 16">
-                <use xlink:href="img/sprite.svg#sprite-insta"></use>
+                <use xlink:href="#sprite-insta"></use>
               </svg>
               Мы в Инстаграме
             </a>
@@ -376,7 +377,7 @@
           <li class="social-list__item">
             <a href="#" class="social-list__link" aria-label="Перейти в Фейсбук">
               <svg class="social-list__icon social-list__icon--fb" width="10" height="19" viewbox="0 0 10 19">
-                <use xlink:href="img/sprite.svg#sprite-fb"></use>
+                <use xlink:href="#sprite-fb"></use>
               </svg>
               Мы в Фейсбуке
             </a>
@@ -386,7 +387,7 @@
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Перейти на курс HTML Academy">
             HTML Academy
             <svg class="copyright__icon" width="27px" height="34" viewbox="0 0 27 35">
-              <use xlink:href="img/sprite.svg#sprite-htmlacademy"></use>
+              <use xlink:href="#sprite-htmlacademy"></use>
             </svg>
           </a>
         </div>
@@ -396,7 +397,6 @@
     <script>
       document.createElement( "picture" );
     </script>
-    <script src="js/polyfill/picturefill.js" async=""></script>
     <script src="js/polyfill/svguse.js" defer=""></script>
     <script src="js/polyfill/focus-visible.js"></script>
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=c461c44d-a89d-4167-a9e9-008782f98509" type="text/javascript"></script>
